# warmonger

./: .clang-format  .doxygen.conf  .gitignore  .gitmodules  CMakeLists.txt  Constants.h  Exception.h  README.md  TODO  Version.h.in  common.pri  doxygen.conf.in  project.godot  test.pro  warmonger.pro  warmonger_automoc.cmake
core/: Armor.cpp  Armor.h  Army.cpp  Army.h  ArmyType.cpp  ArmyType.h  Banner.cpp  Banner.h  CampaignMap.cpp  CampaignMap.h  Civilization.cpp  Civilization.h  Component.cpp  Component.h  ComponentType.cpp  ComponentType.h  Constants.h  DamageType.cpp  DamageType.h  Entity.cpp  Entity.h  EntityType.cpp  EntityType.h  Exception.cpp  Exception.h  Faction.cpp  Faction.h  Field.cpp  Field.h  Game.cpp  Game.h  GameEntity.h  GameEntityPart.h  GameObject.h  Hexagon.cpp  Hexagon.h  HierarchyNode.hpp  Map.cpp  Map.h  MapGenerator.cpp  (+41 more)
doc/: ECS.md
interface/: warmonger.gdnlib  wcontext.gdns
io/: CampaignMapJsonSerializer.cpp  CampaignMapJsonSerializer.h  CampaignMapJsonUnserializer.cpp  CampaignMapJsonUnserializer.h  CampaignMapSerializer.h  CampaignMapUnserializer.h  Context.cpp  Context.h  Exception.cpp  Exception.h  File.cpp  File.h  JsonSerializer.cpp  JsonSerializer.h  JsonUnserializer.cpp  JsonUnserializer.h  JsonUtils.cpp  JsonUtils.h  MapJsonSerializer.cpp  MapJsonUnserializer.cpp  MapJsonUnserializer.h  MapSerializer.h  MapUnserializer.h  QJsonUtil.cpp  QJsonUtil.h  Reference.cpp  Reference.h  SanityCheck.cpp  SanityCheck.h  Serializer.h  Unserializer.h  WorldJsonSerializer.cpp  WorldJsonSerializer.h  WorldJsonUnserializer.cpp  WorldJsonUnserializer.h  WorldUnserializer.h  io.pro
log/: ConsoleHandler.h  Filter.cpp  Formatter.cpp  Handler.cpp  Handler.h  LogRecord.cpp  LogRecord.h  LogStream.h  Logger.cpp  Logger.h  log.pro
native/: .clang-format  CMakeLists.txt  DoxygenLayout.xml  doxygen.conf.in  warmonger_automoc.cmake
scenes/warmonger/: MainMenu.gd  MainMenu.tscn
src/: Main.cpp  Warmonger.cpp  Warmonger.h  main.cpp  src.pri
src/core/: Armor.cpp  Armor.h  Banner.cpp  Banner.h  BuiltInComponentTypes.cpp  BuiltInComponentTypes.h  Civilization.cpp  Civilization.h  Component.cpp  Component.h  ComponentType.cpp  ComponentType.h  DamageType.cpp  DamageType.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityType.cpp  Error.cpp  Error.h  Exception.cpp  Exception.h  Faction.cpp  Faction.h  Field.cpp  Field.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameEntity.cpp  GameEntity.h  GameEntityPart.cpp  GameEntityPart.h  GameObject.cpp  GameObject.h  Hexagon.cpp  Hexagon.h  IntermediateRepresentation.cpp  (+70 more)
src/io/: File.cpp  File.h  JsonSerializer.cpp  JsonSerializer.h  JsonSerializer.hpp  JsonUnserializer.cpp  JsonUnserializer.hpp  JsonUtils.cpp  JsonUtils.h  MapJsonSerializer.cpp  MapJsonSerializer.h  MapJsonUnserializer.cpp  MapJsonUnserializer.h  MapUnserializer.h  Reference.cpp  Reference.h  Visitor.hpp  WorldJsonSerializer.cpp  WorldJsonSerializer.h  WorldJsonUnserializer.cpp  WorldJsonUnserializer.h  WorldSerializer.h  WorldUnserializer.h
src/log/: ConsoleHandler.cpp  ConsoleHandler.h  Filter.h  Formatter.h  LogLevel.h  LogStream.cpp  LogStream.h  Logger.cpp  Logger.h
src/test/: Util.cpp  Util.h  WObject.cpp  WObject.h  test_warmonger.cpp
src/tools/: Utils.cpp  Utils.h  wcheck_map.cpp  wcheck_world.cpp  wcheck_worldsurface.cpp  wcreate_default_settings.cpp  whexagon.py  wtest_rules_bindings.cpp
src/ui/: ApplicationContext.cpp  ApplicationContext.h  Banner.cpp  Banner.h  BannerDialog.qml  BasicMap.cpp  BasicMap.h  BasicMiniMap.h  GameMap.cpp  GameMap.h  Hexagon.cpp  Hexagon.h  LuaWorldSurfaceRules.cpp  LuaWorldSurfaceRules.h  Map.cpp  Map.h  MapDrawer.cpp  (+37 more)
test/: Util.cpp  Util.h  test.pro  test_warmonger.cpp
tools/: Utils.cpp  Utils.h  makesurfacepkg.py  warmonger_world_smoketest.cpp  wcheck_campaignmap.cpp  wcheck_map.cpp  wcheck_world.cpp  wcheck_worldsurface.cpp  wcreate_default_settings.cpp  whexagon.py
ui/: ApplicationContext.cpp  ApplicationContext.h  Banner.cpp  Banner.h  BasicMap.cpp  BasicMap.h  BasicMiniMap.cpp  BasicMiniMap.h  CampaignMapDrawer.h  CampaignMapEditor.cpp  CampaignMapEditor.h  CampaignMapPreview.cpp  CampaignMapPreview.h  CampaignMapWatcher.cpp  CampaignMapWatcher.h  CampaignMiniMap.cpp  CampaignMiniMap.h  Context.cpp  Context.h  GameMap.cpp  GameMap.h  Main.cpp  MapDrawer.cpp  MapDrawer.h  MapEditor.cpp  MapEditor.h  MapNodeDrawer.h  MapPreview.cpp  MapPreview.h  MapUtil.cpp  MapUtil.h  MapWatcher.cpp  MapWindow.cpp  MapWindow.h  MiniMap.cpp  MiniMap.h  Palette.cpp  Palette.h  SearchPaths.cpp  SearchPaths.h  (+7 more)
utils/: Constants.h  Exception.h  Hexagon.cpp  Hexagon.h  Logging.cpp  Logging.h  MapGenerator.cpp  MapGenerator.h  QVariantUtils.h  Settings.cpp  Settings.h  ToString.cpp  ToString.h  Utils.cpp  Utils.h
warmonger/: CMakeLists.txt  Context.cpp  Context.h  MainMenu.qml  NewGame.qml  README.md  Warmonger.qml  doxygen.conf.in  warmonger.cpp  warmonger.qrc
warmonger/doc/: OVERVIEW.md
warmonger/src/core/: Faction.cpp  Faction.h  IntermediateRepresentation.h  LuaWorldRules.cpp  Map.cpp  Map.h  MapNode.cpp  WObject.h
warmonger/src/io/: JsonSerializer.cpp  Serializer.h
warmonger/src/test/ui/: MapEditor.cpp  MapUtil.cpp
warmonger/src/tools/: Utils.h
warmonger/src/ui/: BasicMiniMap.h  MapUtil.h  MapView.cpp  MapWatcher.h  Render.cpp  Render.h  WorldSurfaceRules.cpp
warmonger/src/utils/: Exception.h  Lua.cpp  Lua.h  QVariantUtils.h  Settings.h  Utils.h
warmonger/src/warmonger/: Context.cpp  Context.h  Gameplay.qml  MainMenu.qml  NewGame.qml  warmonger.cpp  warmonger.qrc
warmonger/src/wmapeditor/: MapsWindow.qml
warmonger_mapeditor/: FactionsWindow.qml  MapEditor.qml  ObjectTypeSelector.qml  SideBar.qml  warmonger_mapeditor.cpp  warmonger_mapeditor.qrc
wmapeditor/: BannerDialog.qml  CampaignMapsWindow.qml  Context.cpp  Context.h  FactionsWindow.qml  MapEditor.qml  MapsWindow.qml  ObjectTypeSelector.qml  SideBar.qml  wmapeditor.cpp  wmapeditor.qrc
wwrapper/: SanityCheck.cpp  SanityCheck.h  Utils.cpp  Utils.h  wcheck_campaignmap.cpp  wcheck_world.cpp  wcheck_worldsurface.cpp
(+260 files in other folders)
